--- a/document-demo/src/index.html
+++ b/document-demo/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DocumentDemo</title>
+  <title>FeedMeMoney.com</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="kcpo.ico">
   <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
